src/objects/Client_Deals__c.object
<CustomObject>
    <description>Formal or informal agreements/relationships with clients - with a value of over $100k annually.</description>
    <fields>
        <fullName>Account_Name__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Client Deals</relationshipLabel>
        <relationshipName>Pipeline_Items</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Actual_Close_Date__c</fullName>
        <inlineHelpText>Enter the date that the client made their final decision re the deal/relationship/case... whether we won - or lost.</inlineHelpText>
        <label>Actual Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Annualized_Revenue__c</fullName>
        <label>Estimated Annual Revenue</label>
        <precision>8</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Anticipated_Close_Date__c</fullName>
        <inlineHelpText>Enter the date that we expect the client to make a final decision re the deal/relationship/case.</inlineHelpText>
        <label>Anticipated Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_Vendor__c</fullName>
        <inlineHelpText>If we know who the client/prospect currently uses, select the name from the list provided.</inlineHelpText>
        <label>Current Vendor</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Competitors</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Deal_Duration__c</fullName>
        <inlineHelpText>Select from the dropdown list.</inlineHelpText>
        <label>Deal Duration</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 Year</fullName>
                </value>
                <value>
                    <fullName>2 Years</fullName>
                </value>
                <value>
                    <fullName>3 Years</fullName>
                </value>
                <value>
                    <fullName>4 Years</fullName>
                </value>
                <value>
                    <fullName>5 Years</fullName>
                </value>
                <value>
                    <fullName>Indefinite</fullName>
                </value>
                <value>
                    <fullName>Not Yet known</fullName>
                    <label>Not Yet Known</label>
                </value>
                <value>
                    <fullName>Duration of Specific Case</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Deal Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Geography__c</fullName>
        <label>Geography</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Domestic</fullName>
                    <default>true</default>
                    <label>Domestic</label>
                </value>
                <value>
                    <fullName>International</fullName>
                </value>
                <value>
                    <fullName>Global</fullName>
                </value>
                <value>
                    <fullName>State Specific (see state in deal name)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nature_of_Deal__c</fullName>
        <label>Nature of Deal</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Preferred Provider - Formal</fullName>
                </value>
                <value>
                    <fullName>Exclusive Provider- Formal</fullName>
                    <label>Exclusive Provider - Formal</label>
                </value>
                <value>
                    <fullName>Preferred Provider- Informal</fullName>
                    <label>Preferred Provider - Informal</label>
                </value>
                <value>
                    <fullName>Exclusive Provider - Informal</fullName>
                </value>
                <value>
                    <fullName>Specific Case</fullName>
                </value>
                <value>
                    <fullName>Managed Services Agreement</fullName>
                </value>
                <value>
                    <fullName>Preferred Provider - Formal / Renewal</fullName>
                </value>
                <value>
                    <fullName>Exclusive Provider - Formal / Renewal</fullName>
                </value>
                <value>
                    <fullName>Preferred Provider - Informal / Renewal</fullName>
                </value>
                <value>
                    <fullName>Exclusive Provider - Informal / Renewal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Next_Step__c</fullName>
        <label>Next Step</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <label>Opportunity Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pipeline_Revenue__c</fullName>
        <formula>Annualized_Revenue__c *  value( SUBSTITUTE(text(Probability__c), &apos;%&apos;, &apos;&apos;)  )/100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field auto-calculates based on the Annual Revenue and Probability.</inlineHelpText>
        <label>Pipeline Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Probability__c</fullName>
        <inlineHelpText>The likelihood, expressed as a percentage, that we will win this deal.  Change this field as the probability changes.</inlineHelpText>
        <label>Probability</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Stage__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0%</fullName>
                </value>
                <value>
                    <fullName>10%</fullName>
                </value>
                <value>
                    <fullName>20%</fullName>
                </value>
                <value>
                    <fullName>30%</fullName>
                </value>
                <value>
                    <fullName>40%</fullName>
                </value>
                <value>
                    <fullName>50%</fullName>
                </value>
                <value>
                    <fullName>60%</fullName>
                </value>
                <value>
                    <fullName>70%</fullName>
                </value>
                <value>
                    <fullName>80%</fullName>
                </value>
                <value>
                    <fullName>90%</fullName>
                </value>
                <value>
                    <fullName>100%</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Services__c</fullName>
        <inlineHelpText>Select all that apply.</inlineHelpText>
        <label>Service(s)</label>
        <required>true</required>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Reporting</fullName>
                </value>
                <value>
                    <fullName>Defense Records</fullName>
                </value>
                <value>
                    <fullName>Plaintiff_Records</fullName>
                    <label>Plaintiff Records</label>
                </value>
                <value>
                    <fullName>Workers_Comp_Records</fullName>
                    <label>Workers&apos; Comp Records</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Existing Client Relationship</fullName>
                </value>
                <value>
                    <fullName>Non-client Existing Relationship</fullName>
                </value>
                <value>
                    <fullName>Pure Prospecting</fullName>
                </value>
                <value>
                    <fullName>Inside Counsel Referral</fullName>
                </value>
                <value>
                    <fullName>Outside Counsel Referral</fullName>
                </value>
                <value>
                    <fullName>Website</fullName>
                </value>
                <value>
                    <fullName>Direct Mail</fullName>
                </value>
                <value>
                    <fullName>Trade Show</fullName>
                </value>
                <value>
                    <fullName>Mass Email</fullName>
                </value>
                <value>
                    <fullName>Legacy Client Deal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Prospecting</fullName>
                </value>
                <value>
                    <fullName>Identify Decision Makers</fullName>
                </value>
                <value>
                    <fullName>Needs Analysis</fullName>
                </value>
                <value>
                    <fullName>Proposal/Price Quote</fullName>
                </value>
                <value>
                    <fullName>Negotiation/Review</fullName>
                </value>
                <value>
                    <fullName>Closed/Won</fullName>
                </value>
                <value>
                    <fullName>Closed/Lost</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VIP_Status__c</fullName>
        <label>VIP Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>VIP-1</fullName>
                </value>
                <value>
                    <fullName>VIP-2</fullName>
                </value>
                <value>
                    <fullName>VIP-PA</fullName>
                </value>
                <value>
                    <fullName>VIP-TX</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Winner__c</fullName>
        <inlineHelpText>For Closed-Lost deals, select the name of the winning competitor.</inlineHelpText>
        <label>Lost Deal: Winning Competitor</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Competitors</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Won_Deal_Expiration__c</fullName>
        <inlineHelpText>The date that this newly closed/won deal with them expires.</inlineHelpText>
        <label>Won Deal: Expiration Date</label>
        <type>Date</type>
    </fields>
    <label>Client Deals</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Account_Name__c</columns>
        <columns>Nature_of_Deal__c</columns>
        <columns>Services__c</columns>
        <columns>Geography__c</columns>
        <columns>Stage__c</columns>
        <columns>Annualized_Revenue__c</columns>
        <columns>Probability__c</columns>
        <columns>Pipeline_Revenue__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Current_Client_Deals</fullName>
        <columns>NAME</columns>
        <columns>Actual_Close_Date__c</columns>
        <columns>Account_Name__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Nature_of_Deal__c</columns>
        <columns>Services__c</columns>
        <columns>Geography__c</columns>
        <columns>VIP_Status__c</columns>
        <columns>Deal_Duration__c</columns>
        <columns>Won_Deal_Expiration__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Stage__c</field>
            <operation>contains</operation>
            <value>won</value>
        </filters>
        <label>All Current (WON) Deals</label>
    </listViews>
    <listViews>
        <fullName>Current_Client_Deals_ER</fullName>
        <columns>NAME</columns>
        <columns>Actual_Close_Date__c</columns>
        <columns>Account_Name__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Nature_of_Deal__c</columns>
        <columns>Services__c</columns>
        <columns>Geography__c</columns>
        <columns>VIP_Status__c</columns>
        <columns>Deal_Duration__c</columns>
        <columns>Won_Deal_Expiration__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Stage__c</field>
            <operation>contains</operation>
            <value>won</value>
        </filters>
        <filters>
            <field>Nature_of_Deal__c</field>
            <operation>equals</operation>
            <value>Exclusive Provider- Formal,Exclusive Provider - Formal / Renewal</value>
        </filters>
        <filters>
            <field>Services__c</field>
            <operation>includes</operation>
            <value>Reporting</value>
        </filters>
        <label>All Current (WON) Exclusive Reporting</label>
    </listViews>
    <listViews>
        <fullName>Lost_Client_Deals</fullName>
        <columns>NAME</columns>
        <columns>Account_Name__c</columns>
        <columns>Nature_of_Deal__c</columns>
        <columns>Services__c</columns>
        <columns>Geography__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Stage__c</field>
            <operation>contains</operation>
            <value>lost</value>
        </filters>
        <label>All Lost Deals</label>
    </listViews>
    <listViews>
        <fullName>Open_Deals</fullName>
        <columns>NAME</columns>
        <columns>Anticipated_Close_Date__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Account_Name__c</columns>
        <columns>Nature_of_Deal__c</columns>
        <columns>Services__c</columns>
        <columns>Geography__c</columns>
        <columns>Stage__c</columns>
        <columns>Annualized_Revenue__c</columns>
        <columns>Probability__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Stage__c</field>
            <operation>notContain</operation>
            <value>LOST,WON</value>
        </filters>
        <label>All Open Deals</label>
    </listViews>
    <listViews>
        <fullName>X2019_YTD_WON_DEALS</fullName>
        <columns>NAME</columns>
        <columns>Account_Name__c</columns>
        <columns>Annualized_Revenue__c</columns>
        <columns>Nature_of_Deal__c</columns>
        <columns>Stage__c</columns>
        <columns>Actual_Close_Date__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>Closed/Won</value>
        </filters>
        <filters>
            <field>Actual_Close_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>1/1/2019</value>
        </filters>
        <label>2019 YTD &quot;Won&quot; Deals</label>
    </listViews>
    <nameField>
        <label>Deal Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Client Deals</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Close_Date_Required</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL( Stage__c ,&quot;Closed/Won&quot;)  &amp;&amp; 
ISBLANK( Actual_Close_Date__c )</errorConditionFormula>
        <errorDisplayField>Actual_Close_Date__c</errorDisplayField>
        <errorMessage>Please add the actual close date</errorMessage>
    </validationRules>
</CustomObject>